accordions saved status with local storage and use link markup

--- a/css/style.css
+++ b/css/style.css
@@ -162,9 +162,10 @@ body {
 }
 
 .product-acrd-lnk {
+    display: block;
     position: relative;
     text-align: left;
-    cursor: pointer;
+    color: inherit;
 }
 .product-acrd-lnk::after {
     content: "🔺";
