change add to cart for a11y with a form and a disabled attribute on CTA

--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ body {
     background-color: var(--background-dark)
 }
 
-.add-cta.disabled {
+.add-cta:disabled {
     background-color: var(--background-dark)
 }
 
